2002-12-11  Ross Burton  <ross@burtonini.com>

	* help/C/glines-C.omf:
	* help/C/glines.xml: More s/Gnome/GNOME/.

2002-11-27  Ross Burton  <ross@burtonini.com>

	* glines.c: s/Gnome/GNOME/, for #99683.

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>

	* glines.c: (game_about_callback) (game_top_ten_callback) (game_over):
	No more multiple About dialogs, and Score dialog is now modal.
	(Bug #97320)

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* glines.desktop.in: add X-GNOME-BUGZILLA stuff

2002-11-18  Jeremy Browne  <jeremy@synonymous.ca>

	* glines.c: Changes to quit dialog for consistency with other parts of
	gnome-games package. (Bug #97321)

2002-11-10  Tim Musson <trmusson@ihug.co.nz>

	* glines.c: (field_expose_event): redraw more squares after expose
	events (fixes #97314)

2002-11-11  Ross Burton  <ross@burtonini.com>

	* glines.png: New icon contributed by Timothy Musson.

2002-09-20  Ross Burton  <ross@burtonini.com>

	* help/C/glines.xml: Fix paths to the images, closing #93386.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* glines.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-07-14  Ross Burton  <ross@burtonini.com>

	* glines.c: Use g_snprintf() instead of snprintf() so that the
	OSF/1 compiler is happy (fixes #87800).

2002-06-19  Ross Burton  <ross@burtonini.com>

	* glines.c (main): Use the correct icon filename for the window
	icon.

2002-06-02  Ross Burton  <ross@burtonini.com>

	* glines.c: use application pixmap path, instead of libgnome
	pixmap path. Causes glines to run when installed in a different
	prefix to libgnome.

2002-05-05  Chris Lyttle    <chris@wilddev.net>

	* help/C/glines-C.omf : updated for new format of SK 0.3.8.
	* help/C/Makefile.am : updated for new format of SK 0.3.8.

2002-04-23  Bastien Nocera  <hadess@hadess.net>

	* glines.c: (start_game), (draw_preview), (draw_all_balls),
	(draw_box), (draw_ball), (deactivate), (preview_expose_event),